# deltakit-monorepo

./: .gitattributes  .gitignore  .npmrc  .prototools  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.changeset/: bump-markdown-0.2.2.md  calm-snails-draw.md  ci-fixes-patch.md  cold-rings-matter.md  docs-cancel-support.md  fix-version-numbers.md  khaki-timers-flash.md  quick-boars-unite.md  smooth-auto-scroll-react.md
.github/workflows/: ci.yml  publish.yml  release-pr.yml  release.yml
.husky/: pre-commit
.moon/: tasks.yml  toolchain.yml  workspace.yml
apps/docs/: moon.yml  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/docs/.source/: browser.ts  server.ts
contributions/: release.md
examples/fastapi-tanstack-api/: .env.example  alembic.ini  db.sqlite3  moon.yml  pyproject.toml
examples/fastapi-tanstack-api/migrations/: env.py
examples/fastapi-tanstack-api/migrations/versions/: 6b4f34dc7cf6_initial_chat_session_table.py  93e6a7ac414a_add_title_to_chat_session.py
examples/fastapi-tanstack-api/src/: main.py
examples/fastapi-tanstack-api/src/core/: __init__.py  engine.py  seed.py  settings.py
examples/fastapi-tanstack-api/src/modules/agents/: models.py  prompt.py  tools.py
examples/fastapi-tanstack-api/src/modules/chat/: router.py
examples/fastapi-tanstack-api/src/modules/chat_agno/: agent.py  router.py
examples/fastapi-tanstack-api/src/modules/chat_agno_background_task/: router.py
examples/fastapi-tanstack-api/src/modules/chat_agno_websocket/: router.py
examples/fastapi-tanstack-api/src/modules/chat_static/: router.py
examples/fastapi-tanstack-api/src/modules/session/: router.py  schema.py
examples/fastapi-tanstack-frontend/: .cta.json  moon.yml  package.json
(+79 files in other folders)
